# TestTask

./: .gitignore  AnalyzerOfData.hpp  CMakeLists.txt  DataCollector.hpp  GUClasses.hpp  GUIClasses.hpp  Includes.hpp  Object.hpp  TestFile  main.cpp
